--- a/src/config/lang/ru.json
+++ b/src/config/lang/ru.json
@@ -22,7 +22,7 @@
             ]
         },
         "files": {
-            "cv": "Angsar Aben CV.pdf"
+            "cv": "Angsar Aben CV.docx"
         },
         "pages": {
             "home": {
