--- a/src/config/lang/en.json
+++ b/src/config/lang/en.json
@@ -21,7 +21,7 @@
             ]
         },
         "files": {
-            "cv": "Angsar Aben CV.pdf"
+            "cv": "Angsar Aben CV.docx"
         },
         "pages": {
             "home": {
