--- a/src/config/lang/en.json
+++ b/src/config/lang/en.json
@@ -65,6 +65,10 @@
                         },
                         "experience": {
                             "title": "Experience"
+                        },
+                        "achievements": {
+                            "title": "Achievements",
+                            "description": "Here you can check my achievements throughout the years."
                         }
                 },
                 "pages": {}
@@ -119,7 +123,9 @@
             "leaveRequest": "Leave a request",
             "moreAbout": "More about me",
             "send": "Send",
-            "goBack": "Go back"
+            "goBack": "Go back",
+            "organization": "Organization",
+            "view": "View"
         },
         "labels": {
             "downloadCV": "Download CV",
