--- a/src/config/lang/en.json
+++ b/src/config/lang/en.json
@@ -75,7 +75,8 @@
             },
             "projects": {
                 "meta": {
-                    "title": "Projects"
+                    "title": "Projects",
+                    "description": "I’d love to hear from you! Whether you have a question, want to collaborate, or just want to say hello, feel free to reach out. You can use the contact form below, and I’ll get back to you as soon as possible."
                 }
             },
             "services": {
