--- a/src/config/lang/kz.json
+++ b/src/config/lang/kz.json
@@ -73,7 +73,8 @@
             },
             "projects": {
                 "meta": {
-                    "title": "Жобалар"
+                    "title": "Жобалар",
+                    "description": "Осы жерде менің жобаларымды көре аласыз"
                 }
             },
             "services": {
