--- a/src/config/lang/ru.json
+++ b/src/config/lang/ru.json
@@ -73,7 +73,8 @@
             },
             "projects": {
                 "meta": {
-                    "title": "Проекты"
+                    "title": "Проекты",
+                    "description": "Здесь вы можете посмотреть на мои работы"
                 }
             },
             "services": {
